--- a/__test__/testFiles/index.html
+++ b/__test__/testFiles/index.html
@@ -8,6 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Nice, its working</h1>
+  <h1>Nice, its wor</h1>
+  <img src="airplane.svg" alt="airplane">
 </body>
 </html>
