--- a/__test__/testFiles/index.html
+++ b/__test__/testFiles/index.html
@@ -8,7 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Nice, its wor</h1>
+  <h1>Hi I think this works pretty dece
+  </h1>
   <img src="airplane.svg" alt="airplane">
 </body>
 </html>
