bug: couldn't send pdf files
When setting the header, pdf files were excluded from the
mimeType definitions. This caused errors when pages were
loading pdf documents. Fixed by adding the 'application/pdf'
mime type.

--- a/__test__/testFiles/index.html
+++ b/__test__/testFiles/index.html
@@ -8,8 +8,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hi I think this works pretty dece
+  <h1>Hi I think this works pretty decent
   </h1>
   <img src="airplane.svg" alt="airplane">
+  <a href="Brent-Soles_Resume.pdf" rel="newwindow">resume</a>
 </body>
 </html>
