error: working on patch for weird windows bug
Windows bug, upon fetching a certain resource (don't know what yet),
will cause the server to crash.

Possible causes:

- Insufficient mime types which are being sent.
- Header for size of file not being set
- Other?

--- a/__test__/testFiles/index.html
+++ b/__test__/testFiles/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hi I think this works pretty decent
+  <h1>Hi I think this works pretty well on my local device 
   </h1>
   <img src="airplane.svg" alt="airplane">
   <a href="Brent-Soles_Resume.pdf" rel="newwindow">resume</a>
